2007-04-12  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/metadata/xmp-parse.c: made the parser more tolerant and
	accept XMP blocks that are not using the namespace prefixes
	recommended by the XMP specification.

2007-04-12  Sven Neumann  <sven@gimp.org>

	* app/actions/plug-in-commands.c: if a plug-in or script
	registered with a DISPLAY argument after the run-mode argument,
	then pass the ID of the active display to the script, optionally
	followed by image and drawable IDs.

	* plug-ins/script-fu/scheme-wrapper.c
	* plug-ins/script-fu/script-fu-enums.h
	* plug-ins/script-fu/script-fu-interface.c
	* plug-ins/script-fu/script-fu-scripts.c
	* plug-ins/script-fu/script-fu-types.h: added SF-DISPLAY parameter.

2007-04-12  Sven Neumann  <sven@gimp.org>

	* plug-ins/sel2path/*.[ch]: updated copyright header.

2007-04-12  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/channel_mixer.c
	* plug-ins/gfig/gfig-style.c: get rid of compiler warnings about
	dereferencing type-punned pointers.

2007-04-12  Sven Neumann  <sven@gimp.org>

	* app/tools/gimplevelstool.c
	* app/tools/gimpcurvestool.c
	* app/xcf/xcf-save.c
	* app/xcf/xcf-load.c
	* app/widgets/gimppaletteeditor.c
	* app/widgets/gimpcolormapeditor.c
	* app/widgets/gimpcolorframe.c: get rid of compiler warnings about
	dereferencing type-punned pointers.

2007-04-12  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpprotocol.[ch] (struct _GPParam): don't redefine
	the GimpParasite struct, just use it.

	* libgimp/gimp.c: include gimpparasite.h.

	* libgimp/gimpitemcombobox.c (gimp_item_combo_box_new): initialize
	combo_box_type to suppress a compiler warning.

	* libgimpwidgets/gimpmemsizeentry.c (gimp_memsize_entry_new):
	avoid dereferencing a type-punned pointer.

2007-04-11  Jakub Steiner <jimmac@ximian.com>

	* themes/Default/images/stock-display-filter-contrast-24.svg
	* themes/Default/images/stock-display-filter-colorblind-24.svg
	* themes/Default/images/stock-display-filter-contrast-24.png