@@ -92,7 +92,9 @@ sub display_delete {
 
     $help = <<'HELP';
 This procedure removes the specified display. If this is the last remaining 
-display for the underlying image, then the image is deleted also.
+display for the underlying image, then the image is deleted also. Note that
+the display is closed no matter if the image is dirty or not. Better save
+the image before calling this procedure.
 HELP
 
     &std_pdb_misc;
